# IdeaCodeAPMTools

./: .gitmodules  settings.gradle.kts
apmToolsLib/: build.gradle.kts
apmToolsLib/src/androidTest/java/com/ideacode/apmtools/lib/: ExampleInstrumentedTest.kt
apmToolsLib/src/main/cpp/: CMakeLists.txt  MallocHook.cpp  mock_native_fun.cpp  native_hook.cpp
apmToolsLib/src/main/java/com/ideacode/apmtools/lib/api/: Env.kt  IdeacodeApmClient.kt  MemoryMonitorStrategy.kt  MonitorContext.kt  MonitorStrategy.kt
apmToolsLib/src/main/java/com/ideacode/apmtools/lib/core/: Config.kt  ConfigBuilder.kt  Manager.kt
apmToolsLib/src/main/java/com/ideacode/apmtools/lib/util/: ApmLogX.kt  ProcessUtils.kt
apmToolsLib/src/test/java/com/ideacode/apmtools/lib/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/ideacode/apmtools/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ideacode/apmtools/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/ideacode/apmtools/nativelib/: NativeLib.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ideacode/apmtools/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
